fix: remove redundant opacity causing flickering

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -6,9 +6,8 @@
 }
 window#waybar {
     background: rgba(59, 51, 47, 1);
-    opacity: 0.9;
 }
-/*MODULES*/
+/*MODULOS*/
 .modules-right {
     margin: 1px 10px 0 0;
 }
@@ -19,7 +18,7 @@ window#waybar {
 .modules-left {
     margin: 1px 0 0 10px;
 }
-/*MODULES IND*/
+/*MODULOS IND*/
 #workspaces button {
     padding: 0px 6px 0px 6px;
     background-color: rgba(81, 81, 79, 1);
